--- a/scss/style.css
+++ b/scss/style.css
@@ -39,14 +39,20 @@ header .header-content .header-block {
   justify-content: space-around;
   margin-top: 10px;
 }
-header .header-content .header-block .nav-button {
+header .header-content .header-block a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+header .header-content .header-block a .nav-button {
   display: inline-flex;
   align-items: center;
   font-family: "Elegant1";
   font-size: 12px;
+  color: white;
 }
 @media (min-width: 992px) {
-  header .header-content .header-block .nav-button {
+  header .header-content .header-block a .nav-button {
     font-size: 24px;
   }
 }
@@ -93,13 +99,10 @@ header .header-content .header-block .nav-button {
   width: 100%;
   background-color: #303003;
   /* The actual timeline (the vertical ruler) */
-  /* The actual timeline (the vertical ruler) */
   /* Container around content */
   /* The circles on the timeline */
   /* Place the container to the left */
   /* Place the container to the right */
-  /* Fix the circle for containers on the right side */
-  /* The actual content */
 }
 .main-content .fairytale .tale-title {
   color: white;
@@ -115,7 +118,7 @@ header .header-content .header-block .nav-button {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 16px;
+  padding: 16px 0 16px 0;
 }
 .main-content .fairytale .timeline::after {
   content: "";
@@ -125,6 +128,7 @@ header .header-content .header-block .nav-button {
   top: 0;
   bottom: 0;
   left: 50%;
+  transform: translateX(50%);
 }
 .main-content .fairytale .container {
   position: relative;
@@ -132,6 +136,33 @@ header .header-content .header-block .nav-button {
   width: 50%;
   margin-bottom: 40px;
   width: 175px;
+  /* The actual content */
+}
+.main-content .fairytale .container .content {
+  position: relative;
+  border-radius: 6px;
+  font-family: "Elegant1";
+}
+.main-content .fairytale .container .content h2 {
+  color: white;
+  margin: 10px 0px;
+}
+.main-content .fairytale .container .content .tale-image {
+  border: 12px solid white;
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+}
+.main-content .fairytale .container .content .tale-image img {
+  width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+.main-content .fairytale .container .content .tale-brief {
+  position: absolute;
+  top: 80px;
+  width: 175px;
+  color: white;
 }
 .main-content .fairytale .container::after {
   content: "";
@@ -150,32 +181,21 @@ header .header-content .header-block .nav-button {
 .main-content .fairytale .left::after {
   left: 100%;
 }
+.main-content .fairytale .left .tale-brief {
+  right: -204px;
+}
 .main-content .fairytale .right {
   left: 50%;
   margin-left: 16px;
 }
+.main-content .fairytale .right .content h2 {
+  text-align: right;
+}
+.main-content .fairytale .right .tale-brief {
+  right: 204px;
+}
 .main-content .fairytale .right::after {
-  left: -16px;
-}
-.main-content .fairytale .content {
-  position: relative;
-  border-radius: 6px;
-  font-family: "Elegant1";
-}
-.main-content .fairytale .content h2 {
-  color: white;
-  margin: 10px 0px;
-}
-.main-content .fairytale .content .tale-image {
-  border: 12px solid white;
-  width: 100%;
-  height: 250px;
-  overflow: hidden;
-}
-.main-content .fairytale .content .tale-image img {
-  width: 100%;
-  min-height: 100%;
-  object-fit: cover;
+  left: -28px;
 }
 
 /*# sourceMappingURL=style.css.map */
