--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,6 +46,8 @@ header {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                color: white;
+                text-decoration: none;
 
                 .nav-button {
                     display: inline-flex;
@@ -71,7 +73,7 @@ header {
         background-image: url("../static-assets/images/GS-hero.jpeg");
 
         /* Create the parallax scrolling effect */
-        background-attachment: fixed;
+        background-attachment: local;
         background-position: -730px bottom;
         background-repeat: no-repeat;
         background-size: cover;
@@ -194,21 +196,20 @@ header {
 
         /* Place the container to the left */
         .left {
-            left: 12px;
+            left: calc(50% - 175px - 16px);
 
             &::after {
-                left: 100%;
+                left: calc(100% + 5px);
             }
 
             .tale-brief {
-                right: -204px;
+                right: calc(-175px - 16px - 4px - 16px);
             }
         }
 
         /* Place the container to the right */
         .right {
-            left: 50%;
-            margin-left: 16px;
+            left: calc(50% + 6px + 16px);
 
             .content {
                 h2 {
@@ -217,11 +218,11 @@ header {
             }
 
             .tale-brief {
-                right: 204px;
+                right: calc(177px + 16px + 16px);
             }
 
             &::after {
-                left: -28px;
+                right: calc(100% + 3px);
             }
         }
     }
