--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,9 @@
 * {
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
 body {
     margin: 0;
 }
@@ -28,38 +31,162 @@ header {
     color: white;
     width: 100%;
 
-    .header-content {
-        height: 60px;
-        display: flex;
-        justify-content: center;
+    .header-content-dweb {
+        display: none;
 
-        .header-block {
-            height: 40px;
-            width: 80%;
-            border-top: 1px solid white;
-            border-bottom: 1px solid white;
+        @include lg {
+            height: 60px;
             display: flex;
-            justify-content: space-around;
-            margin-top: 10px;
+            justify-content: center;
 
-            a {
+            .header-block {
+                height: 40px;
+                width: 80%;
+                border-top: 1px solid white;
+                border-bottom: 1px solid white;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
-                color: white;
-                text-decoration: none;
+                justify-content: space-around;
+                margin-top: 10px;
 
-                .nav-button {
-                    display: inline-flex;
-                    align-items: center;
-                    font-family: "Elegant1";
-                    font-size: 12px;
+                a {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
                     color: white;
+                    text-decoration: none;
 
-                    @include lg {
+                    .nav-button {
+                        display: inline-flex;
+                        align-items: center;
+                        font-family: "Elegant1";
+                        font-size: 12px;
+                        color: white;
+
                         font-size: 24px;
                     }
                 }
+            }
+        }
+    }
+
+    .header-content-mweb {
+        @include lg {
+            display: none;
+        }
+        .nav-header {
+            height: 93px;
+
+            #nav-icon {
+                width: 40px;
+                height: 45px;
+                position: fixed;
+                z-index: 4;
+                right: 0;
+                margin: 24px 16px;
+                -webkit-transform: rotate(0deg);
+                -moz-transform: rotate(0deg);
+                -o-transform: rotate(0deg);
+                transform: rotate(0deg);
+                -webkit-transition: 0.5s ease-in-out;
+                -moz-transition: 0.5s ease-in-out;
+                -o-transition: 0.5s ease-in-out;
+                transition: 0.5s ease-in-out;
+                cursor: pointer;
+            }
+
+            #nav-icon span {
+                display: block;
+                position: absolute;
+                height: 4px;
+                width: 100%;
+                background: white;
+                border-radius: 9px;
+                opacity: 1;
+                left: 0;
+                -webkit-transform: rotate(0deg);
+                -moz-transform: rotate(0deg);
+                -o-transform: rotate(0deg);
+                transform: rotate(0deg);
+                -webkit-transition: 0.25s ease-in-out;
+                -moz-transition: 0.25s ease-in-out;
+                -o-transition: 0.25s ease-in-out;
+                transition: 0.25s ease-in-out;
+            }
+            #nav-icon {
+                span {
+                    &:nth-child(1) {
+                        top: 0px;
+                    }
+                    &:nth-child(2) {
+                        top: 10px;
+                    }
+                    &:nth-child(3) {
+                        top: 10px;
+                    }
+                    &:nth-child(4) {
+                        top: 20px;
+                    }
+                }
+            }
+            #nav-icon.open {
+                span {
+                    background-color: rgb(40, 40, 40);
+                    &:nth-child(1) {
+                        top: 18px;
+                        width: 0%;
+                        left: 50%;
+                    }
+                    &:nth-child(2) {
+                        -webkit-transform: rotate(45deg);
+                        -moz-transform: rotate(45deg);
+                        -o-transform: rotate(45deg);
+                        transform: rotate(45deg);
+                    }
+                    &:nth-child(3) {
+                        -webkit-transform: rotate(-45deg);
+                        -moz-transform: rotate(-45deg);
+                        -o-transform: rotate(-45deg);
+                        transform: rotate(-45deg);
+                    }
+                    &:nth-child(4) {
+                        top: 18px;
+                        width: 0%;
+                        left: 50%;
+                    }
+                }
+            }
+        }
+
+        .nav-wrapper {
+            position: fixed;
+            top: 0;
+            height: 100vh;
+            right: -70%;
+            background-color: rgb(200, 200, 200);
+            width: 70%;
+            -webkit-transition: 0.25s ease-in-out;
+            -moz-transition: 0.25s ease-in-out;
+            -o-transition: 0.25s ease-in-out;
+            transition: 0.25s ease-in-out;
+            opacity: 0;
+
+            .nav-links {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin-top: 160px;
+                margin-left: 40px;
+
+                a {
+                    margin-bottom: 40px;
+                    text-decoration: none;
+                    color: #333333;
+                    font-size: 1.5rem;
+                }
+            }
+            &.open {
+                right: 0;
+                opacity: 1;
             }
         }
     }
