Fixed header scroll issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,7 @@ header {
                 margin-top: 10px;
 
                 a {
+                    cursor: pointer;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
@@ -79,7 +80,7 @@ header {
             #nav-icon {
                 width: 40px;
                 height: 45px;
-                position: fixed;
+                position: absolute;
                 z-index: 4;
                 right: 0;
                 margin: 24px 16px;
@@ -129,6 +130,7 @@ header {
                 }
             }
             #nav-icon.open {
+                position: fixed;
                 span {
                     background-color: rgb(40, 40, 40);
                     &:nth-child(1) {
@@ -178,6 +180,7 @@ header {
                 margin-left: 40px;
 
                 a {
+                    cursor: pointer;
                     margin-bottom: 40px;
                     text-decoration: none;
                     color: #333333;
@@ -249,6 +252,9 @@ header {
             }
         }
 
+        .timeline-wrap {
+            padding-bottom: 16px;
+        }
         /* The actual timeline (the vertical ruler) */
         .timeline {
             position: relative;
